AC_INIT(configure.in)
AM_CONFIG_HEADER(config.h)

PACKAGE=Ario
VERSION=0.1

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AC_PROG_CC
AC_PROG_INSTALL
AC_STDC_HEADERS

PKG_CHECK_MODULES(DEPS, [gnome-vfs-2.0 gtk+-2.0 >= 2.6 glib-2.0 >= 2.4 gobject-2.0 >= 2.4 libglade-2.0 eel-2.0 libmpd])

AC_SUBST(DEPS_CFLAGS)
AC_SUBST(DEPS_LIBS)

dnl i18n
ALL_LINGUAS="fr"
AM_GLIB_GNU_GETTEXT
GETTEXT_PACKAGE=$PACKAGE
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["${GETTEXT_PACKAGE}"], [gettext domain])

dnl Gconf
AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2

AC_OUTPUT([
Makefile
src/Makefile
data/Makefile
po/Makefile.in
data/ario.desktop
])

